--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 streamlit_extras
+streamlit>=1.28
+pandas>=1.3.0
 psycopg2-binary>=2.9.6
 sqlalchemy>=2.0.0
+python-dotenv>=0.19.0
+email-validator>=1.1.0
